--- a/style.css
+++ b/style.css
@@ -12,7 +12,11 @@ body{
  margin-top:40px;   
 }
 
-
+.navbar-nav{
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
+    font-weight:600;
+}
 
 h1{
     font-family: 'Raleway', sans-serif;
@@ -132,9 +136,9 @@ margin:20px;
     margin: 30px 0 0 0; 
     font-size:18px;
     text-align:right;
-    right:4%;
     position:absolute;
      width:300px;
+    right:3%;
 }
 
 #joinhead{
@@ -417,7 +421,7 @@ margin: 0 0 10px 0;
     position:relative;
     color:#fff;
     opacity:0;
-   padding: 2px 0 0 3px;
+   padding: 1px 0 0 3px;
     height:30px;
     left:15px;
     top: 6px;
@@ -430,7 +434,7 @@ margin: 0 0 10px 0;
     position:absolute;
     color:#fff;
     opacity:0;
-   margin: -6px 0 0 3px;
+   margin: -7px 0 0 3px;
     height:30px;
     left:15px;
     top: 6px;
@@ -446,7 +450,7 @@ margin: 0 0 10px 0;
     z-index:5;
     display:none;
     margin:100px 0 0 0;
-	width: 90%;
+	width: 95%;
     text-align:left;
     position:absolute;
     display:block;
@@ -472,19 +476,22 @@ margin: 0 0 10px 0;
 #leftmenu{
     margin-left:75px;
 }
+
+#navbar1{
+ margin: 0 0 0 10px;   
+}
 .newday{
-    float:left;
+
     position:fixed;
     width:50px;
     height:50px;
     background-color:#fff;
      border-radius: 50%;
-    margin:10px 0 0 20px;
+    margin:20px 0 0 0;
      box-shadow: inset 0.1rem 0.1rem 0 rgba(0, 0, 0, 0.1);
 }
 #plus{
     text-align:center;
- padding:6px 0 0 0;   
     font-size:22px;
 }
 
@@ -755,7 +762,9 @@ Color Picker Slider
     float:right;
     position:absolute;
      border-radius: 50%;
-    margin:-18px 0 0 100%;
+    margin:-18px 0 0 0;
+    opacity:1;
+    right:2%
 }
 
 select{
