--- a/style.css
+++ b/style.css
@@ -9,7 +9,16 @@ body{
   
 }
 #main{
- margin-top:40px;   
+ margin-top:40px;  
+    width:100%;
+    height:100%;
+}
+
+#emptycont{
+ background-color:#1ab7ea;  
+    width:100%;
+    height:1024px;
+    
 }
 
 .navbar-nav{
@@ -142,10 +151,12 @@ margin:20px;
 }
 
 #joinhead{
-    font-size:30px;
+    font-size:36px;
     text-align:center;
     color:#fff;
-    margin:100px 0 0 0;
+    margin:0 0 80px 0;
+    font-family: 'Raleway', sans-serif;
+    font-weight:200;
 }
 
 #joingroup{
@@ -697,8 +708,6 @@ Color Picker Slider
     appearance: none;
     position: relative;
     vertical-align: middle;
-    left:15%;
-    width: 70%;
     border-radius: 20px;
     background: hsl(0,0%,80%);
     box-shadow: 0 1px 0 hsla(0,0%,100%,.6);
