--- a/style.css
+++ b/style.css
@@ -6,12 +6,15 @@ body{
  padding: 0;
     margin:0;
     font-family: 'Raleway', sans-serif;
-  
+  color:#000;
 }
+
+
 #main{
  margin-top:40px;  
     width:100%;
     height:100%;
+    color:#000;
 }
 
 #emptycont{
@@ -21,6 +24,11 @@ body{
     
 }
 
+#newcont{
+     background-color:rgba(127,127,127,1); 
+    color:#000;
+    margin-top:-40px;
+}
 .navbar-nav{
     font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
@@ -59,12 +67,6 @@ h1{
     text-decoration:none;
 }
 
-#csliders{
-    display:block;
-margin:20px 0 50px 0;
-    align-content:center;
-   width:100%;
-}
 
 
 
@@ -484,13 +486,13 @@ margin: 0 0 10px 0;
     float:right;
 }
 
-#leftmenu{
-    margin-left:75px;
-}
+
 
 #navbar1{
  margin: 0 0 0 10px;   
 }
+
+
 .newday{
 
     position:fixed;
@@ -501,6 +503,8 @@ margin: 0 0 10px 0;
     margin:20px 0 0 0;
      box-shadow: inset 0.1rem 0.1rem 0 rgba(0, 0, 0, 0.1);
 }
+
+
 #plus{
     text-align:center;
     font-size:22px;
@@ -710,8 +714,9 @@ Color Picker Slider
     vertical-align: middle;
     border-radius: 20px;
     background: hsl(0,0%,80%);
-    box-shadow: 0 1px 0 hsla(0,0%,100%,.6);
+    box-shadow: 0 1px 0 rgba(255,0,0,0.3);
     overflow: hidden;
+    height:10px;
 }
 
 .slider-input::-webkit-slider-thumb,
@@ -723,13 +728,13 @@ Color Picker Slider
     border: 5px solid hsl(0,0%,80%);
     cursor: pointer;
     background: hsl(0,0%,40%);
-    box-shadow: inset 0 1px 2px hsla(0,0%,0%,.4);
+    box-shadow: inset 0 1px 2px rgba(255,0,0,0.3);
     transition: border-width .2s cubic-bezier(.26, .08, .15, 1);
 }
 
 .slider-input:active::-webkit-slider-thumb,
 .slider-input:active::slider-thumb {
-    border: 0px solid hsl(0,0%,80%);
+    border: 0px solid rgba(255,0,0,0.3);
     transition-duration: .1;
 }
 
