--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html{
 }
 
 body{
+    background-color:rgba(127,127,127,1);
  padding: 0;
     margin:0;
     font-family: 'Raleway', sans-serif;
@@ -25,7 +26,7 @@ body{
 }
 
 #newcont{
-     background-color:rgba(127,127,127,1); 
+   
     color:#000;
     margin-top:-40px;
 }
@@ -85,6 +86,10 @@ margin:20px;
   text-align:center;  
     font-family: 'Raleway', sans-serif;
     font-size:14px;
+}
+
+.num{
+ display:inline;
 }
 
 #headerform{
@@ -156,13 +161,13 @@ margin:20px;
     font-size:36px;
     text-align:center;
     color:#fff;
-    margin:0 0 80px 0;
+    margin:40px 0 80px 0;
     font-family: 'Raleway', sans-serif;
     font-weight:200;
 }
 
 #joingroup{
-    margin:100px 0 0 0;
+   
 }
 
 .jtext{
@@ -643,99 +648,23 @@ The rest are modular
 /*==============================================
 Color Picker Slider
 ================================================ */
-
+.slider-step{
+    margin:10px 0 20px 0 ;
+}
 
 #red, #green, #blue {
   clear: left;
   width: 100%;
-  margin: 30px 0 30px 0;
+  margin: 15px 0 15px 0;
 }
 
-#red .ui-slider-range {
-  background: #ef2929;
+#newred, #newgreen, #newblue{
+  margin: 30px 0 30px 0;  
 }
 
-#green .ui-slider-range {
-  background: #8ae234;
-}
-
-#blue .ui-slider-range {
-  background: #729fcf;
-}
-
-
-#jred, #jgreen, #jblue {
-  clear: left;
-  width: 100%;
-  margin: 10px 0 10px 0;
-}
-
-#jred .ui-slider-range {
-  background: #ef2929;
-}
-
-#jgreen .ui-slider-range {
-  background: #8ae234;
-}
-
-#jblue .ui-slider-range {
-  background: #729fcf;
-}
-
-.ui-slider-handle {
-  width: 25px !important;
-  height: 25px !important;
-
-  margin-top: -0.25px;
-}
-
-.ui-slider-range {
-
-}
-
-.colors > div {
-  background: rgba(0, 0, 0, 0.5);
-  border: none;
-  border-radius: 1rem;
-  height: 1rem;
-  width: 100%;
-}
-
-
-.slider {
-    position: relative;
-    display: inline-block;
-    margin: -4px 6px 0 0;
-}
-
-.slider-input {
-    appearance: none;
-    position: relative;
-    vertical-align: middle;
-    border-radius: 20px;
-    background: hsl(0,0%,80%);
-    box-shadow: 0 1px 0 rgba(255,0,0,0.3);
-    overflow: hidden;
-    height:10px;
-}
-
-.slider-input::-webkit-slider-thumb,
-.slider-input::slider-thumb {
-    appearance: none;
-    border-radius: 20px;
-    width: 20px;
-    height: 20px;
-    border: 5px solid hsl(0,0%,80%);
-    cursor: pointer;
-    background: hsl(0,0%,40%);
-    box-shadow: inset 0 1px 2px rgba(255,0,0,0.3);
-    transition: border-width .2s cubic-bezier(.26, .08, .15, 1);
-}
-
-.slider-input:active::-webkit-slider-thumb,
-.slider-input:active::slider-thumb {
-    border: 0px solid rgba(255,0,0,0.3);
-    transition-duration: .1;
+#colorpicker{
+ width:100%;
+    margin-top:-5%;
 }
 
 #subbtn{
@@ -776,7 +705,7 @@ Color Picker Slider
     float:right;
     position:absolute;
      border-radius: 50%;
-    margin:-18px 0 0 0;
+    margin:-20px 0 0 0;
     opacity:1;
     right:2%
 }
