--- a/jquery.nouislider.css
+++ b/jquery.nouislider.css
@@ -64,12 +64,7 @@
 .noUi-horizontal {
 	height: 18px;
 }
-.noUi-horizontal .noUi-handle {
-	width: 30px;
-	height: 30px;
-	left: -17px;
-	top: -6px;
-}
+
 .noUi-vertical {
 	width: 18px;
 }
@@ -82,16 +77,7 @@
 
 /* Styling;
  */
-.noUi-background {
-	background: #FAFAFA;
-	box-shadow: inset 0 1px 1px #f0f0f0;
-}
-.noUi-connect {
-	background: #3FB8AF;
-	box-shadow: inset 0 0 3px rgba(51,51,51,0.45);
--webkit-transition: background 450ms;
-	transition: background 450ms;
-}
+
 .noUi-origin {
 	border-radius: 10px;
 }
@@ -112,22 +98,15 @@
 .noUi-vertical .noUi-dragable {
 	cursor: n-resize;
 }
-.noUi-handle {
-	border-radius: 50%;
-	background: #FFF;
-	cursor: default;
-	box-shadow: inset 0 0 1px #FFF,
-				inset 0 1px 7px #EBEBEB,
-				0 3px 6px -3px #BBB;
-}
+
 .noUi-active {
-	box-shadow: inset 0 0 1px #FFF,
+	/*box-shadow: inset 0 0 1px #FFF,
 				inset 0 1px 7px #DDD,
-				0 3px 6px -3px #BBB;
+				0 3px 6px -3px #BBB;*/
 }
 
 /* Handle stripes;
- */
+
 .noUi-handle:before,
 .noUi-handle:after {
 	content: "";
@@ -152,7 +131,7 @@
 .noUi-vertical .noUi-handle:after {
 	top: 17px;
 }
-
+ */
 /* Disabled state;
  */
 [disabled].noUi-connect,
