--- a/style.css
+++ b/style.css
@@ -2,11 +2,15 @@ html{
   height: 100%;
 }
 
+#content{
+    overflow:hidden;
+}
+
 body{
-    background-color:rgba(26,183,234,1);
- padding: 0;
+    background-color:#fff;
+    padding: 0;
     margin:0;
-    font-family: 'Raleway', sans-serif;
+    font-family: "museo-slab";
   color:#000;
 }
 
@@ -30,25 +34,25 @@ body{
 }
 
 #newcont{
-   
+   background-color:rgb(5, 186, 186);  
     color:#000;
     margin-top:-40px;
 }
 .navbar-nav{
-    font-family: 'Raleway', sans-serif;
+    font-family: "museo-slab";
     text-transform: uppercase;
     font-weight:600;
 }
 
 h1{
-    font-family: 'Raleway', sans-serif;
+    font-family: "museo-slab";
 }
 
 .nav-btn{
     height:40px;
     text-decoration:none;
  
-    font-family: 'Raleway', sans-serif;
+    font-family: "museo-slab";
     display:inline;
 
     font-size: 12px;
@@ -58,7 +62,7 @@ h1{
 .day {
     width:100%;
     height: 500px;
-    font-family: 'Raleway', sans-serif;
+    font-family: "museo-slab";
     text-decoration:none;
     text-align:center;
     position:relative;
@@ -80,7 +84,7 @@ h1{
 margin:20px;
     align-content:center;
    width:100%;
-    font-family: 'Raleway', sans-serif;
+    font-family: "museo-slab";
     font-size:14px;
 }
 
@@ -88,7 +92,7 @@ margin:20px;
 .title{
     
   text-align:center;  
-    font-family: 'Raleway', sans-serif;
+    font-family: "museo-slab";
     font-size:14px;
 }
 
@@ -103,7 +107,7 @@ margin:20px;
 
 #loginform{
     height:100%;
- font-family: 'Raleway', sans-serif;
+ font-family: "museo-slab";
     text-decoration:none;
   
 }
@@ -113,13 +117,13 @@ margin:20px;
 }
 
 #colorform{
-    font-family: 'Raleway', sans-serif;
+    font-family: "museo-slab";
     text-align:center;
     
 }
 
 .centermessage{
-     font-family: 'Raleway', sans-serif;
+     font-family: "museo-slab";
     text-align:center;
     padding-top: 40px;
     text-decoration:none;
@@ -136,7 +140,7 @@ margin:20px;
 
 
 #paging{
-    font-family: 'Raleway', sans-serif;
+    font-family: "museo-slab";
     text-align:center;
     padding-top: 40px;
     text-decoration:none;
@@ -166,7 +170,7 @@ margin:20px;
     text-align:center;
     color:#fff;
     margin:40px 0 80px 0;
-    font-family: 'Raleway', sans-serif;
+    font-family: "museo-slab";
     font-weight:200;
 }
 
@@ -175,7 +179,7 @@ margin:20px;
     text-align:center;
     color:#fff;
     margin:40px 0 80px 0;
-    font-family: 'Raleway', sans-serif;
+    font-family: "museo-slab";
     font-weight:200;
 }
 .subheads{
@@ -183,7 +187,7 @@ margin:20px;
     text-align:center;
     color:#fff;
     margin:0 0 80px 0;
-    font-family: 'Raleway', sans-serif;
+    font-family: "museo-slab";
     font-weight:200;
 }
 
@@ -192,7 +196,7 @@ margin:20px;
     text-align:left;
     color:#fff;
     margin:0 0 10px 0;
-    font-family: 'Raleway', sans-serif;
+    font-family: "museo-slab";
     font-weight:200;
 }
 
@@ -618,7 +622,7 @@ All form elements need these styles
 The rest are modular
 ================================================ */
 [class*="Raleway"]:before {
-  font-family: 'Raleway', sans-serif;
+  font-family: "museo-slab";
   font-size: 1.5rem;
   line-height: 2;
 }
