--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,8 @@ body {
   background-color: #e1e1e1;
   width: 100%;
   position: fixed;
-  top: 0; }
+  top: 0;
+  z-index: 100; }
 
 .navbar-nav {
   font-family: "museo-slab";
@@ -182,7 +183,6 @@ body {
   right: 3%; }
 
 .title {
-  text-align: center;
   font-size: 14px; }
 
 #joinhead {
@@ -347,7 +347,8 @@ select {
   display: inline; }
 
 #headerform {
-  padding: 4px; }
+  padding: 4px;
+  margin-top: 30px; }
 
 #loginform {
   height: 100%;
@@ -362,7 +363,14 @@ select {
 .skillcont {
   background-color: #04a1a1;
   width: 100%;
-  height: 34px; }
+  height: 34px;
+  margin: -15px 0 20px 0; }
+
+.subheads3 {
+  font-size: 14px;
+  text-align: center;
+  color: #04a1a1;
+  margin: 0 0 10px 0; }
 
 .subheads {
   font-size: 18px;
@@ -381,7 +389,7 @@ select {
   font-size: 36px;
   text-align: center;
   color: #fff;
-  margin: 80px 0 80px 0;
+  margin: 80px 0 50px 0;
   font-weight: 700; }
 
 .jtext {
@@ -530,13 +538,12 @@ select {
 
 .subutton {
   width: 100%;
-  height: 40px;
+  height: 60px;
   text-transform: uppercase;
-  background: #fff;
-  color: #000;
-  border-radius: 7px;
-  box-shadow: 0 5px #e1e1e1;
-  border: none; }
+  background: #05384f;
+  color: #fff;
+  border: none;
+  margin-top: 40px; }
 
 .subutton:hover {
   width: 100%;
@@ -549,11 +556,7 @@ select {
   border: none; }
 
 .noUi-handle {
-  border-radius: 50%;
-  background: #048888;
-  cursor: default; }
-
-.noUi-handle {
+  z-index: 5;
   border-radius: 50%;
   background: #048888;
   cursor: default; }
@@ -571,3 +574,15 @@ select {
   height: 30px;
   left: -17px;
   top: -12px; }
+
+.changecol {
+  z-index: 10; }
+
+.newform {
+  width: 50%;
+  float: right;
+  margin: -27px 0 0 0; }
+
+.slidertitle {
+  padding: 7px 0 0 10px;
+  color: #037070; }
