--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,14 @@ body {
   font-weight: 500;
   font-size: 14px; }
 
+.letter {
+  fill: #05baba; }
+
+.logo {
+  width: 150px;
+  height: 35px;
+  top: 5px; }
+
 #content {
   overflow: hidden; }
 
@@ -21,6 +29,11 @@ body {
   background-color: #fff; }
 
 #emptycont {
+  background-color: #05baba;
+  width: 100%;
+  height: 1024px; }
+
+#joincont {
   background-color: #05baba;
   width: 100%;
   height: 1024px; }
@@ -358,7 +371,8 @@ select {
   background-color: #04a1a1;
   width: 100%;
   border: none;
-  color: #fff; }
+  color: #fff;
+  height: 55px; }
 
 .skillcont {
   background-color: #04a1a1;
@@ -410,10 +424,9 @@ select {
 #jsliders {
   position: relative;
   display: block;
-  width: 60%;
+  width: 100%;
   background-color: RGBA(0, 0, 0, 0.05);
-  border-radius: 50%;
-  margin: 0 0 0 40%; }
+  border-radius: 50%; }
 
 #jsliders:before {
   content: "";
@@ -424,10 +437,9 @@ select {
 #joinbars {
   position: relative;
   display: block;
-  width: 60%;
+  width: 100%;
   background-color: RGBA(0, 0, 0, 0.05);
-  border-radius: 50%;
-  margin: 0 20% 0 20%; }
+  border-radius: 50%; }
 
 #joinbars:before {
   content: "";
@@ -469,10 +481,9 @@ select {
 #joindots {
   position: relative;
   display: block;
-  width: 60%;
+  width: 100%;
   background-color: RGBA(0, 0, 0, 0.05);
-  border-radius: 50%;
-  margin: 0 40% 0 0; }
+  border-radius: 50%; }
 
 #joindots:before {
   content: "";
@@ -517,6 +528,17 @@ select {
   clear: left;
   width: 100%;
   margin: 15px 0 15px 0; }
+  #red .noUi-background, #green .noUi-background, #blue .noUi-background {
+    background-color: #fff; }
+  #red .noUi-handle, #green .noUi-handle, #blue .noUi-handle {
+    width: 25px;
+    height: 25px;
+    left: -5px;
+    top: -7px;
+    z-index: 5;
+    border-radius: 50%;
+    background: #c8c8c8;
+    cursor: default; }
 
 #newred, #newgreen, #newblue {
   margin: 30px 0 30px 0; }
@@ -547,13 +569,12 @@ select {
 
 .subutton:hover {
   width: 100%;
-  height: 40px;
+  height: 60px;
   text-transform: uppercase;
-  background: #e1e1e1;
-  color: #000;
-  border-radius: 7px;
-  box-shadow: 0 5px #fff;
-  border: none; }
+  background: #085a7f;
+  color: #fff;
+  border: none;
+  margin-top: 40px; }
 
 .noUi-handle {
   z-index: 5;
