--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 .logo {
   width: 150px;
   height: 35px;
-  top: 5px; }
+  margin-top: 5px; }
 
 #content {
   overflow: hidden; }
@@ -36,7 +36,7 @@ body {
 #joincont {
   background-color: #05baba;
   width: 100%;
-  height: 1024px; }
+  min-height: 1024px; }
 
 #newcont {
   background-color: #05baba;
@@ -398,6 +398,9 @@ select {
   color: #fff;
   margin: 0 0 10px 0; }
 
+#col2, #col3 {
+  margin: 0 0 0 40px; }
+
 .heads {
   font-family: "museo-slab";
   font-size: 36px;
@@ -408,18 +411,10 @@ select {
 
 .jtext {
   text-align: center;
-  width: 60%;
+  width: 100%;
   color: #fff;
-  font-size: 14px; }
-
-#jt1 {
-  margin: 20px 0 0 40%; }
-
-#jt2 {
-  margin: 20px 20% 0 20%; }
-
-#jt3 {
-  margin: 20px 40% 0 0; }
+  font-size: 14px;
+  margin: 20px 0 0 0; }
 
 #jsliders {
   position: relative;
