--- a/css/style.scss
+++ b/css/style.scss
@@ -34,7 +34,7 @@ body{
 .logo{
  width:150px;
     height: 35px;
-    top:5px;
+    margin-top:5px;
 }
 #content{
     overflow:hidden;
@@ -60,7 +60,7 @@ body{
 #joincont{
     background-color: $primary-color;  
     width:100%;
-    height:1024px;
+    min-height:1024px;
 }
 
 #newcont{
@@ -480,6 +480,10 @@ background-color: darken( $primary-color, 5% );
 
 
 //join
+
+#col2, #col3 {
+ margin: 0 0 0 40px;   
+}
 .heads{
     font-family: $font-stack;
     font-size: $text-header;
@@ -491,22 +495,13 @@ background-color: darken( $primary-color, 5% );
 
 .jtext{
  text-align:center;  
-    width:60%; 
+    width:100%; 
     color:#fff;
     font-size: $text-body;
+    margin:20px 0 0 0;
 }
 
-#jt1{
- margin: 20px 0 0 40%;   
-}
 
-#jt2{
- margin:  20px 20% 0 20%;   
-}
-
-#jt3{
- margin: 20px 40% 0 0;   
-}
 #jsliders{
      position:relative;
      display:block;
