--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,15 @@
+@mixin respond-to($media) {
+  @if $media == handhelds {
+    @media only screen and (max-width: 320px) { @content; }
+  }
+  @else if $media == medium-screens {
+    @media only screen and (min-width: 321px) and (max-width: 768px) { @content; }
+  }
+  @else if $media == wide-screens {
+    @media only screen and (min-width: 768px) { @content; }
+  }
+}
+
 $primary-color: #05baba;
 $ltgrey-color: #e1e1e1;
 $op-black: RGBA(0, 0, 0, .05);
@@ -32,9 +44,11 @@ body{
 }
 
 .logo{
- width:150px;
-    height: 35px;
     margin-top:5px;
+    
+    @include respond-to(handhelds) { width:100px; height:25px; margin-left:30px;}
+    @include respond-to(medium-screens) {  width:150px; height:35px; margin-left:0; }
+    @include respond-to(wide-screens) {  width:150px; height:35px; margin-left:0;}
 }
 #content{
     overflow:hidden;
@@ -206,11 +220,12 @@ body{
     text-decoration:none;
     text-align:center;
     position:relative;
-    margin-left:0px;   
+    margin-left:0px;  
+    
+    
 }
 
 .dow{
-    font-size: $text-h1;
     text-align:left;
     padding: 30px 0 0 0;
     position:absolute;
@@ -221,6 +236,10 @@ a   {
     text-decoration:none;
     }
 
+    @include respond-to(handhelds) { font-size: 20px ;}
+    @include respond-to(medium-screens) { font-size: 26px; }
+    @include respond-to(wide-screens) { font-size: $text-h1; }
+
 }
 
 .desc{
@@ -230,6 +249,9 @@ a   {
     position:absolute;
     width:300px;
     right:3%;
+    @include respond-to(handhelds) { margin: 60px 0 0 0; text-align:left ;}
+    @include respond-to(medium-screens) { margin: 60px 0 0 0; text-align:left; }
+    @include respond-to(wide-screens) { margin: 30px 0 0 0; text-align:right; }
 }
 
 
@@ -481,8 +503,21 @@ background-color: darken( $primary-color, 5% );
 
 //join
 
+#navbottom{
+background-color:$button;
+
+}
+
+#joinbtn{
+     @include respond-to(handhelds) { opacity:0;}
+    @include respond-to(medium-screens) {opacity:1;}
+    @include respond-to(wide-screens) { opacity:1; }
+}
 #col2, #col3 {
- margin: 0 0 0 40px;   
+
+     @include respond-to(handhelds) { margin: 30px 0 0 0;}
+    @include respond-to(medium-screens) {  margin: 0 0 0 40px;}
+    @include respond-to(wide-screens) { margin: 0 0 0 40px; }
 }
 .heads{
     font-family: $font-stack;
@@ -675,23 +710,24 @@ background-color: darken( $primary-color, 5% );
 
 .subutton{
     width:100%;
-    height:60px;
     text-transform: uppercase;
     background: $button;
 	color: #fff;
     border:none;
-    margin-top: 40px;
+    @include respond-to(handhelds) { height:80px;}
+    @include respond-to(medium-screens) { margin-top: 40px; height:60px;}
+    @include respond-to(wide-screens) {  margin-top: 40px;  height:60px;}
 }
 
 
 .subutton:hover{
-     width:100%;
-    height:60px;
     text-transform: uppercase;
     background: lighten( $button, 10%);
 	color: #fff;
     border:none;
-    margin-top: 40px;
+    @include respond-to(handhelds) { height:80px;}
+    @include respond-to(medium-screens) { margin-top: 40px; height:60px;}
+    @include respond-to(wide-screens) {  margin-top: 40px;  height:60px;}
 }
 
 .noUi-handle {
