--- a/css/style.css
+++ b/css/style.css
@@ -11,22 +11,23 @@ body {
   fill: #05baba; }
 
 .logo {
-  margin-top: 5px; }
+  margin-left: 0;
+  list-style: none; }
   @media only screen and (max-width: 320px) {
     .logo {
       width: 100px;
       height: 25px;
-      margin-left: 30px; } }
+      margin-top: 15px; } }
   @media only screen and (min-width: 321px) and (max-width: 768px) {
     .logo {
-      width: 150px;
-      height: 35px;
-      margin-left: 0; } }
+      width: 100px;
+      height: 25px;
+      margin-top: 15px; } }
   @media only screen and (min-width: 768px) {
     .logo {
       width: 150px;
       height: 35px;
-      margin-left: 0; } }
+      margin-top: 5px; } }
 
 #content {
   overflow: hidden; }
@@ -41,6 +42,11 @@ body {
   height: 70px;
   background-color: #fff; }
 
+#regcont {
+  background-color: #05baba;
+  width: 100%;
+  height: 1024px; }
+
 #emptycont {
   background-color: #05baba;
   width: 100%;
@@ -49,7 +55,22 @@ body {
 #joincont {
   background-color: #05baba;
   width: 100%;
-  min-height: 1024px; }
+  min-height: 1024px;
+  padding-bottom: 120px; }
+
+#logincont {
+  background-color: #05baba;
+  width: 100%; }
+  @media only screen and (max-width: 320px) {
+    #logincont {
+      height: 568px;
+      margin: -34px 0 0 0; } }
+  @media only screen and (min-width: 321px) and (max-width: 768px) {
+    #logincont {
+      min-height: 1024px; } }
+  @media only screen and (min-width: 768px) {
+    #logincont {
+      min-height: 1024px; } }
 
 #newcont {
   background-color: #05baba;
@@ -79,6 +100,10 @@ body {
 
 #navbar1 {
   margin: 0 0 0 10px; }
+
+.profilepic {
+  border-radius: 50%;
+  margin-top: 2px; }
 
 .newday {
   position: fixed;
@@ -397,8 +422,21 @@ select {
   margin-top: 30px; }
 
 #loginform {
-  height: 100%;
+  text-align: center;
   text-decoration: none; }
+
+.headspadding {
+  font-family: "museo-slab";
+  font-size: 36px;
+  text-align: center;
+  color: #fff;
+  padding: 80px 0 50px 0;
+  font-weight: 700; }
+
+.loginsub {
+  color: #048888;
+  font-weight: 500;
+  font-size: 14px; }
 
 #descarea {
   background-color: #04a1a1;
@@ -667,7 +705,8 @@ select {
 .newform {
   width: 50%;
   float: right;
-  margin: -27px 0 0 0; }
+  margin: -27px 0 0 0;
+  -webkit-appearance: none; }
 
 .slidertitle {
   padding: 7px 0 0 10px;
