--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,12 @@ body {
       width: 100px;
       height: 25px;
       margin-top: 15px; } }
-  @media only screen and (min-width: 321px) and (max-width: 768px) {
+  @media only screen and (min-width: 321px) and (max-width: 640px) {
+    .logo {
+      width: 100px;
+      height: 25px;
+      margin-top: 15px; } }
+  @media only screen and (min-width: 641px) and (max-width: 768px) {
     .logo {
       width: 100px;
       height: 25px;
@@ -65,7 +70,7 @@ body {
     #logincont {
       height: 568px;
       margin: -34px 0 0 0; } }
-  @media only screen and (min-width: 321px) and (max-width: 768px) {
+  @media only screen and (min-width: 641px) and (max-width: 768px) {
     #logincont {
       min-height: 1024px; } }
   @media only screen and (min-width: 768px) {
@@ -98,9 +103,6 @@ body {
   font-size: 24px;
   width: 100px; }
 
-#navbar1 {
-  margin: 0 0 0 10px; }
-
 .profilepic {
   border-radius: 50%;
   margin-top: 2px; }
@@ -115,7 +117,6 @@ body {
   box-shadow: inset 0.1rem 0.1rem 0 rgba(0, 0, 0, 0.1); }
 
 #plus {
-  text-align: center;
   font-size: 24px; }
 
 #menu {
@@ -212,7 +213,8 @@ body {
   text-decoration: none;
   text-align: center;
   position: relative;
-  margin-left: 0px; }
+  margin-left: 0px;
+  overflow: hidden; }
 
 .dow {
   text-align: left;
@@ -226,7 +228,10 @@ body {
   @media only screen and (max-width: 320px) {
     .dow {
       font-size: 20px; } }
-  @media only screen and (min-width: 321px) and (max-width: 768px) {
+  @media only screen and (min-width: 321px) and (max-width: 640px) {
+    .dow {
+      font-size: 20px; } }
+  @media only screen and (min-width: 641px) and (max-width: 768px) {
     .dow {
       font-size: 26px; } }
   @media only screen and (min-width: 768px) {
@@ -236,22 +241,28 @@ body {
 .desc {
   margin: 30px 0 0 0;
   font-size: 16px;
-  text-align: right;
   position: absolute;
-  width: 300px;
-  right: 3%; }
+  width: 300px; }
   @media only screen and (max-width: 320px) {
     .desc {
       margin: 60px 0 0 0;
-      text-align: left; } }
-  @media only screen and (min-width: 321px) and (max-width: 768px) {
+      text-align: left;
+      left: 4%; } }
+  @media only screen and (min-width: 321px) and (max-width: 640px) {
     .desc {
       margin: 60px 0 0 0;
-      text-align: left; } }
+      text-align: left;
+      left: 4%; } }
+  @media only screen and (min-width: 641px) and (max-width: 768px) {
+    .desc {
+      margin: 60px 0 0 0;
+      text-align: left;
+      left: 4%; } }
   @media only screen and (min-width: 768px) {
     .desc {
       margin: 30px 0 0 0;
-      text-align: right; } }
+      text-align: right;
+      right: 3%; } }
 
 .title {
   font-size: 14px; }
@@ -475,7 +486,7 @@ select {
 @media only screen and (max-width: 320px) {
   #joinbtn {
     opacity: 0; } }
-@media only screen and (min-width: 321px) and (max-width: 768px) {
+@media only screen and (min-width: 641px) and (max-width: 768px) {
   #joinbtn {
     opacity: 1; } }
 @media only screen and (min-width: 768px) {
@@ -485,7 +496,7 @@ select {
 @media only screen and (max-width: 320px) {
   #col2, #col3 {
     margin: 30px 0 0 0; } }
-@media only screen and (min-width: 321px) and (max-width: 768px) {
+@media only screen and (min-width: 641px) and (max-width: 768px) {
   #col2, #col3 {
     margin: 0 0 0 40px; } }
 @media only screen and (min-width: 768px) {
@@ -653,7 +664,7 @@ select {
   @media only screen and (max-width: 320px) {
     .subutton {
       height: 80px; } }
-  @media only screen and (min-width: 321px) and (max-width: 768px) {
+  @media only screen and (min-width: 641px) and (max-width: 768px) {
     .subutton {
       margin-top: 40px;
       height: 60px; } }
@@ -670,7 +681,7 @@ select {
   @media only screen and (max-width: 320px) {
     .subutton:hover {
       height: 80px; } }
-  @media only screen and (min-width: 321px) and (max-width: 768px) {
+  @media only screen and (min-width: 641px) and (max-width: 768px) {
     .subutton:hover {
       margin-top: 40px;
       height: 60px; } }
