--- a/css/style.scss
+++ b/css/style.scss
@@ -88,6 +88,13 @@ body{
     padding-bottom:120px;
 }
 
+#changecont{
+    background-color: $primary-color;  
+    width:100%;
+    min-height:1024px;
+    padding-bottom:120px;
+}
+
 #logincont{
     background-color: $primary-color;  
     width:100%;
@@ -131,6 +138,10 @@ body{
 .profilepic{
  border-radius:50%;
     margin-top:2px;
+}
+.profilepicform{
+ border-radius:50%;
+    margin:2px 0 0 36%;
 }
 .newday{
 
