--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ body {
   margin: 0 0 0 0;
   border-left-style: solid;
   border-left-width: 20px;
-  border-left-color: #1C9FDB; }
+  border-left-color: #04bab9; }
 
 .dt-singleskill {
   position: relative;
@@ -107,7 +107,7 @@ body {
   margin: 0 0 0 0;
   border-left-style: solid;
   border-left-width: 20px;
-  border-left-color: #FF6165; }
+  border-left-color: #ed4736; }
 
 .skillcopy {
   padding: 10px; }
