--- a/css/style.scss
+++ b/css/style.scss
@@ -102,7 +102,7 @@ body{
     margin: 0 0 0 0;
     border-left-style:solid;
     border-left-width:20px;
-    border-left-color:#1C9FDB;
+    border-left-color:#04bab9;
 }
 
 .dt-singleskill{
@@ -111,7 +111,7 @@ body{
     margin: 0 0 0 0;
     border-left-style:solid;
     border-left-width:20px;
-    border-left-color:#FF6165;
+    border-left-color:#ed4736;
 }
 
 .skillcopy{
