--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,35 @@
+.MuseoSlab-100 {
+  font-family: MuseoSlab-100;
+  font-weight: normal;
+  font-style: normal; }
+
+.MuseoSlab-700 {
+  font-family: MuseoSlab-700;
+  font-weight: normal;
+  font-style: normal; }
+
+.MuseoSlab-900 {
+  font-family: MuseoSlab-900;
+  font-weight: normal;
+  font-style: normal; }
+
+.MuseoSlab-300 {
+  font-family: MuseoSlab-300;
+  font-weight: normal;
+  font-style: normal; }
+
+.MuseoSlab-500 {
+  font-family: MuseoSlab-500;
+  font-weight: normal;
+  font-style: normal; }
+
 body {
   background-color: #fff;
   padding: 0;
   margin: 0;
-  font-family: "museo slab", sans-serif;
+  font-family: MuseoSlab-500;
   color: #000;
-  font-weight: 500;
+  font-family: MuseoSlab-500;
   font-size: 14px; }
 
 .letter {
@@ -70,7 +95,7 @@ body {
 .skill {
   color: #000;
   position: relative;
-  font-family: "museo slab", sans-serif;
+  font-family: MuseoSlab-500;
   text-decoration: none;
   text-align: left;
   position: relative;
@@ -111,6 +136,10 @@ body {
 
 .skillcopy {
   padding: 10px; }
+
+.skilldesc {
+  display: none;
+  white-space: pre-line; }
 
 .catlabel {
   text-align: left;
@@ -185,9 +214,9 @@ body {
   z-index: 100; }
 
 .navbar-nav {
-  font-family: "museo slab", sans-serif;
+  font-family: MuseoSlab-500;
   text-transform: uppercase;
-  font-weight: 500; }
+  font-family: MuseoSlab-500; }
 
 .nav-btn {
   height: 40px;
@@ -307,7 +336,7 @@ body {
 .day {
   width: 100%;
   height: 500px;
-  font-family: "museo slab", sans-serif;
+  font-family: MuseoSlab-500;
   text-decoration: none;
   text-align: center;
   position: relative;
@@ -319,10 +348,10 @@ body {
   padding: 30px 0 0 0;
   position: absolute;
   left: 4%;
-  font-weight: 300; }
+  font-family: MuseoSlab-300; }
   .dow a {
     color: #ffffff;
-    font-weight: 300;
+    font-family: MuseoSlab-300;
     text-decoration: none; }
   @media only screen and (max-width: 320px) {
     .dow {
@@ -340,7 +369,7 @@ body {
 .desc {
   margin: 30px 0 0 0;
   font-size: 16px;
-  font-weight: 300;
+  font-family: MuseoSlab-300;
   position: absolute;
   width: 400px; }
   @media only screen and (max-width: 320px) {
@@ -374,7 +403,7 @@ body {
   text-align: center;
   color: #fff;
   margin: 40px 0 80px 0;
-  font-weight: 700; }
+  font-family: MuseoSlab-700; }
 
 .trackSI {
   position: relative;
@@ -530,6 +559,9 @@ select {
 #descarea::-webkit-input-placeholder {
   color: #037070; }
 
+#skillarea::-webkit-input-placeholder {
+  color: #037070; }
+
 #newform::-webkit-input {
   color: #037070; }
 
@@ -541,28 +573,35 @@ select {
   margin-top: 30px; }
 
 #loginform {
+  height: 1024px;
   text-align: center;
   text-decoration: none; }
 
 .headspadding {
-  font-family: "museo slab", sans-serif;
+  font-family: MuseoSlab-500;
   font-size: 36px;
   text-align: center;
   color: #fff;
   padding: 80px 0 50px 0;
-  font-weight: 700; }
+  font-family: MuseoSlab-700; }
 
 .loginsub {
   color: #048888;
-  font-weight: 500;
+  font-family: MuseoSlab-500;
   font-size: 14px; }
 
 #descarea {
   background-color: #04a1a1;
   width: 100%;
   border: none;
-  color: #fff;
   height: 55px; }
+
+#skillarea {
+  background-color: #04a1a1;
+  width: 100%;
+  border: none;
+  color: #fff;
+  height: 300px; }
 
 .skillcont {
   background-color: #04a1a1;
@@ -615,12 +654,12 @@ select {
     margin: 0 0 0 40px; } }
 
 .heads {
-  font-family: "museo slab", sans-serif;
+  font-family: MuseoSlab-500;
   font-size: 36px;
   text-align: center;
   color: #fff;
   margin: 80px 0 50px 0;
-  font-weight: 700; }
+  font-family: MuseoSlab-700; }
 
 .jtext {
   text-align: center;
