--- a/css/bootstrap/_forms.scss
+++ b/css/bootstrap/_forms.scss
@@ -119,7 +119,7 @@ output {
   padding: $padding-base-vertical $padding-base-horizontal;
   font-size: $font-size-base;
   line-height: $line-height-base;
-  color: $input-color;
+  //color: $input-color;
   
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   
