--- a/css/bootstrap/_variables.scss
+++ b/css/bootstrap/_variables.scss
@@ -43,11 +43,11 @@ $link-hover-color:      darken($link-color, 15%) !default;
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif:  'museo slab', sans-serif;
+$font-family-sans-serif:  MuseoSlab-500;
 $font-family-serif:       Georgia, "Times New Roman", Times, serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
-$font-family-base:        'museo slab', sans-serif !default;
+$font-family-base:        MuseoSlab-500 !default;
 
 $font-size-base:          14px !default;
 $font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
