--- a/css/style.scss
+++ b/css/style.scss
@@ -13,16 +13,42 @@
   }
 }
 
+.MuseoSlab-100 { 
+	font-family: MuseoSlab-100;
+	font-weight: normal;
+	font-style: normal;
+}
+.MuseoSlab-700 { 
+	font-family: MuseoSlab-700;
+	font-weight: normal;
+	font-style: normal;
+}
+.MuseoSlab-900 { 
+	font-family: MuseoSlab-900;
+	font-weight: normal;
+	font-style: normal;
+}
+.MuseoSlab-300 { 
+	font-family: MuseoSlab-300;
+	font-weight: normal;
+	font-style: normal;
+}
+.MuseoSlab-500 { 
+	font-family: MuseoSlab-500;
+	font-weight: normal;
+	font-style: normal;
+}
+
 $primary-color: #05baba;
 $ltgrey-color: #e1e1e1;
 $op-black: RGBA(0, 0, 0, .05);
 $button: #05384f;
 
-$font-stack: 'museo slab', sans-serif;
-$font-light: 300;
-$font-regular: 500;
-$font-semi: 700;
-$font-bold: 900;
+$font-stack: MuseoSlab-500;
+$font-light: MuseoSlab-300;
+$font-regular: MuseoSlab-500;
+$font-semi: MuseoSlab-700;
+$font-bold: MuseoSlab-900;
 
 $text-med: 24px;
 $text-body: 14px;
@@ -38,7 +64,7 @@ body{
     margin:0;
     font-family: $font-stack;
     color:#000;
-    font-weight: $font-regular;
+    font-family: $font-regular;
     font-size: $text-body;
 }
 
@@ -117,6 +143,10 @@ body{
 .skillcopy{
 padding:10px;
 }
+.skilldesc{
+ display:none;   
+    white-space:pre-line;
+}
 
 .catlabel{
     text-align:left;   
@@ -190,7 +220,7 @@ padding:10px;
 .navbar-nav{
     font-family: $font-stack;
     text-transform: uppercase;
-    font-weight: $font-regular;
+    font-family: $font-regular;
 }
 
 .nav-btn{
@@ -332,15 +362,15 @@ padding:10px;
     padding: 30px 0 0 0;
     position:absolute;
     left: 4%;
-    font-weight: $font-light;
+    font-family: $font-light;
 a   {
     color:#ffffff;
-    font-weight: $font-light;
+    font-family: $font-light;
     text-decoration:none;
     }
 
     @include respond-to(handhelds) { font-size: 18px ;}
- @include respond-to(small-screens) { font-size: 20px; }
+    @include respond-to(small-screens) { font-size: 20px; }
     @include respond-to(medium-screens) { font-size: 26px; }
     @include respond-to(wide-screens) { font-size: $text-h1; }
 
@@ -349,7 +379,7 @@ a   {
 .desc{
     margin: 30px 0 0 0; 
     font-size: $text-lgbody;
-    font-weight: $font-light;
+    font-family: $font-light;
     position:absolute;
     width:400px;
     @include respond-to(handhelds) { width:95%; margin: 60px 0 0 0; text-align:left ; left: 4%;}
@@ -368,7 +398,7 @@ a   {
     text-align:center;
     color:#fff;
     margin:40px 0 80px 0;
-    font-weight: $font-semi;
+    font-family: $font-semi;
 }
 
 .trackSI {
@@ -556,6 +586,9 @@ background-color: darken( $primary-color, 5% );
 #descarea::-webkit-input-placeholder {
     color: darken( $primary-color, 15% );
 }
+#skillarea::-webkit-input-placeholder {
+    color: darken( $primary-color, 15% );
+}
 
 #newform::-webkit-input {
     color: darken( $primary-color, 15% );
@@ -571,7 +604,7 @@ background-color: darken( $primary-color, 5% );
 }
 
 #loginform{
- 
+ height:1024px;
     text-align:center;
     text-decoration:none;
 }
@@ -582,12 +615,12 @@ background-color: darken( $primary-color, 5% );
     text-align:center;
     color:#fff;
     padding:80px 0 50px 0;
-    font-weight: $font-semi;
+    font-family: $font-semi;
 }
 
 .loginsub{
    color: darken( $primary-color, 10% );
-    font-weight: $font-regular;
+    font-family: $font-regular;
     font-size: $text-body;
 }
 
@@ -595,8 +628,15 @@ background-color: darken( $primary-color, 5% );
    background-color: darken( $primary-color, 5% ); 
     width:100%;
     border: none;
-    color:#fff;
+    
     height:55px;
+}
+#skillarea{
+   background-color: darken( $primary-color, 5% ); 
+    width:100%;
+    border: none;
+    color:#fff;
+    height:300px;
 }
 
 .skillcont{
@@ -655,7 +695,7 @@ background-color:$button;
     text-align:center;
     color:#fff;
     margin:80px 0 50px 0;
-    font-weight: $font-semi;
+    font-family: $font-semi;
 }
 
 
